# BotQ

./: .gitignore  BotQ.sln  CMakeLists.txt  Clear.bat  Makefile
BotQ/: BotQ.vcxproj  BotQ.vcxproj.filters  KubizmLevel.xml
BotQ/Code/: BaseLevel.cpp  FastMesh.h  Kubizm — копия.cpp  Kubizm.cpp  MainLoader.cpp  MyGlBackend.x  Prefabs.cpp  RenderBeast.cpp  RenderBeast.h  SSAO.cpp  SSAO.h  Window.cpp
BotQ/Data/: v5.indent
BotQ/Data/resource/: resource.idx
BotQ/Shaders/: AlbedoInstanced.glsl  BloomDownsample.glsl  BloomFinal.glsl  BloomPrefilter.glsl  BloomUpsample.glsl  Glow — копия.glsl  Glow.glsl  Light.glsl  PostProcess.glsl  SkyBox.glsl  Ssao.glsl  Unity3DShader.glsl
BotQ/Worlds/TheSimpleWorld/: level.xml  prefabs.xml
BotQEngine/: BotQEngine.vcxproj  BotQEngine.vcxproj.filters  Profile.cpp  Profile.h  Threading.cpp  Threading.h
BotQEngine/Code/: CacheAlloc.cpp  CacheAlloc.h  Camera.cpp  Camera.h  CommandQueue.cpp  CommandQueue.h  Component.cpp  Component.h  Core.h  DigitalContainer.cpp  DigitalContainer.h  Display.cpp  Display.h  Event.h  GameInstance.cpp  GameInstance.h  GameInstance.ocpp  GameObject.cpp  GameObject.h  GameObjectEvents.cpp  GameObjectEvents.h  IWindow.cpp  IWindow.h  Indent.cpp  Indent.h  Input.cpp  Input.h  InputKeys.h  Level.cpp  Level.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshImporter.cpp  MeshImporter.h  MeshRenderer.cpp  MeshRenderer.h  (+24 more)
BotQEngine/Code/Audio/: AudioInstance.cpp  AudioInstance.h  AudioSource.h  (+1 more)
BotQGraphics/: BotQGraphics.vcxproj  BotQGraphics.vcxproj.filters
BotQGraphics/Code/: Gl3dArray.cpp  Gl3dArray.h  Gl3dCore.h  Gl3dDevice.cpp  Gl3dDevice.h  Gl3dFrameBuffer.cpp  Gl3dFrameBuffer.h  Gl3dManagedInt.h  Gl3dPbrComputer.cpp  Gl3dPbrComputer.h  Gl3dRenderBeast.cpp  Gl3dRenderBeast.h  Gl3dRenderPas.cpp  Gl3dRenderPas.h  Gl3dShader.cpp  Gl3dShader.h  Gl3dTexture.cpp  Gl3dTexture.h  Gl3dVertexArrayBase.cpp  Gl3dVertexArrayBase.h  Gl3dVertexArray_3x1.cpp  Gl3dVertexArray_3x1.h  SharedInfo.cpp  glad.c  glad.h
BotQServer/: BotQServer.vcxproj  BotQServer.vcxproj.filters
BotQServer/Code/: BaseLevel.cpp  BotQServer.cpp  Prefabs.cpp  Window.cpp  Window.h
BotQSystemTools/: BotQSystemTools.vcxproj  BotQSystemTools.vcxproj.filters
BotQSystemTools/Code/: Export.h  IDistributor.h  ITask.cpp  ITask.h  LockGuard.h  SharedInfo.cpp  SyncObject.cpp  SyncObject.h  TaskDistributor.cpp  TaskDistributor.h  Utility.cpp  Utility.h
Bukket/Bq3Converter/: Bq3Converter.vcxproj  Bq3Converter.vcxproj.filters
BulletPhysics/: BulletPhysics.vcxproj  BulletPhysics.vcxproj.filters
ConsoleApplication1/: ConsoleApplication1.vcxproj
MinimalistStart/: MinimalistStart.cpp  MinimalistStart.vcxproj  MinimalistStart.vcxproj.filters  Window.cpp  blit.frag  blit.vert  geometry.frag  geometry.vert  pch.h  postProcess.frag  postProcess.vert  shadowGeometry.frag  shadowGeometry.vert  skybox.frag  skybox.vert  ssao.frag  ssao.vert  ssaoBlur.frag  ssaoBlur.vert
MinimalistStart/light/: directional.vert  point.frag
armpz2/: armpz.cpp  armpz2.vcxproj  armpz2.vcxproj.filters
glsltoc/: glsltoc.cpp  glsltoc.vcxproj  glsltoc.vcxproj.filters
objtoc/: objtoc.cpp  objtoc.vcxproj  objtoc.vcxproj.filters  sphere.h
zlib_static/: zlib_static.vcxproj  zlib_static.vcxproj.filters
zlib_static/Code/: zconf.h
(+121 files in other folders)
